--- a/science.tex
+++ b/science.tex
@@ -176,7 +176,7 @@ While dozens of species have been detected in the disks around low-mass stars
 of elements: H, C, N, O, and S.  All of the molecules seen in disks are also
 prevalent in the ISM, particularly in the hot cores surrounding high-mass stars
 \cite{Nummelin1998a,Belloche2013a}. In high-mass environments, this therefore limits
-their utility as unique disk tracers in high-mass regions, hiding the kinematic
+their utility as unique disk tracers, hiding the kinematic
 signatures of rotation.
 
 At the other extreme of the stellar life cycle, in the atmospheres of dying
@@ -186,9 +186,9 @@ asymptotic giant branch (AGB) lose substantial mass in slow winds
 \cite{Herwig2005a} that form molecules with high atomic weight elements that
 rapidly condense onto dust particles.  The most notable example is that of
 IRC+10216, the expanding gas cloud around the AGB star CW Leonis.  Here, NaCl,
-KCl, AlCl, AlF, NaCN, and a number of other metal-bearing molecules have been
-detected \cite{Agundez2012a,Zack2011a}.  In this instance, we use `metal' in
-the chemist's sense of the word.  NaCl and KCl have been detected around a
+KCl, AlCl, AlF, NaCN, and a number of other metal-bearing (in the chemists'
+sense) molecules have been detected \cite{Agundez2012a,Zack2011a}.  NaCl and
+KCl have been detected around a
 small handful of other AGB and post-AGB stars
 \cite{Milam2007a,Highberger2003a,Sanchez-Contreras2018a}, but to our knowledge,
 no detections outside of these environments have previously been reported.
@@ -197,16 +197,17 @@ We have detected NaCl, KCl, and their $^{37}$Cl and $^{41}$K isotopologues in
 the disk around Orion Source I.  This disk, and the emission lines that were
 found to uniquely trace the disk apart from the hot core, were previously used
 to measure the central mass of Source I as 15 \msun, although those
-measurements were performed before the spectral lines belonging to NaCl and KCl
-were identified \cite{Ginsburg2018b}.  Source I is the brightest object in the
-Orion nebula at millimeter wavelengths and is deeply embedded within a hot core
-\cite{}.  It is a system consisting of a $\sim10^4$ \lsun central object with a
+measurements were performed before the spectral lines were identified as
+belonging to NaCl and KCl
+ \cite{Ginsburg2018b}.  Source I is the brightest object in the
+Orion nebula at millimeter wavelengths and is deeply embedded within a hot
+core.  It is a system consisting of a $\sim10^4$ \lsun central object with a
 photospheric temperature $\approx4000$ K \cite{Testi2010a} surrounded by a
 $\sim0.1$ \msun disk, which we observe nearly edge-on \cite{Plambeck2016a}. The
 central source mass has been debated, with estimates ranging from 7-20 \msun
-\cite{Matthews2010a}, but the highest-resolution data imply a central
+\cite{Matthews2010a,Plambeck2016a}, but the highest-resolution data imply a central
 source mass $M\approx15$ \msun from fitting a Keplerian orbital model to \water
-and line (now identified as NaCl) emission profiles \cite{Ginsburg2018b}.
+and NaCl emission profiles \cite{Ginsburg2018b}.
 
 % \bam{I removed a sentence in there about the mid-infrared.  I'm not sure what
 % % it adds, and I don't think it's referenced again?  Further, the last
@@ -219,9 +220,9 @@ and line (now identified as NaCl) emission profiles \cite{Ginsburg2018b}.
 %BAM: It belongs where we are going to talk about that, then, I think.
 
 We performed the observations using the Atacama Large Millimeter/submillimeter
-Array (ALMA) in three spectral bands (between 0.85~--~3~mm) at the highest
-available spatial resolution, between 0.03~--~0.10 arcseconds. The spectral
-resolution ranged from 1.5~--~6.5~\kms over the same range.  We noted a
+Array (ALMA) in three spectral bands (from 0.85~--~3~mm) at the highest
+available spatial resolution, from 0.03~--~0.10 arcseconds. The spectral
+resolution ranged from 1.5~--~6.5~\kms.  We noted a
 distinctive morphology in the position-velocity diagrams of several lines,
 showing a clear linear gradient in velocity parallel to the disk. To obtain
 higher signal-to-noise in our extracted spectra, we shifted the spectra by
@@ -259,9 +260,7 @@ $v=6$.
 
 %AG: the v=7 detections are <5-sigma; they're probably real, but not confident.
 
-The detection of highly vibrationally excited transitions of these species,
-with upper-state energy levels of as much as $\sim$3000~K, is suggestive of
-extreme physical or radiative conditions.  The emission from these lines comes
+The emission from these lines comes
 from a narrow range in both position and velocity.  By fitting thin Keplerian
 disk models to the position-velocity diagrams of the lines, we constrain the
 emission region to be 30-60 AU from the central source.  The observed emission
@@ -276,8 +275,8 @@ that, unlike SiO and \water, the salts do not trace the outflow.
 
 Once in the gas phase, however, we expect salts to rapidly deplete back into
 dust grains \cite{Cherchneff2012a}.  Since we observe them in emission, with
-narrow velocity line profiles, they must be released into the gas phase by
-either grain destruction, or produced chemically from simple gas-phase
+narrow velocity line profiles, they must be released into the gas phase either
+by grain destruction by chemical production from simple gas-phase
 precursors, likely elemental atomic gas (either neutral or ionized Na and K).
 Because previous studies have ruled out the presence of any atomic
 recombination lines (from atomic ions recombining with electrons) in this
@@ -285,16 +284,26 @@ source, and therefore demonstrated that there is no ionized gas around Source I
 \cite{Plambeck2016a,Baez-Rubio2018a}, we reject the atomic formation route. We
 therefore suggest that the salts are produced by dust destruction, either
 via sputtering by high-energy particles \cite{Schilke1997a} or by thermal
-desorption of the outer dust layers \cite{Decin2016a}.  The small scale
-height of the observed salt emission therefore implies that grain destruction
-is an efficient and rapid process in disk-launched winds.
+desorption of the outer dust layers \cite{Decin2016a}.  The SiO emission seen
+in the outflow confirms that dust destruction is occurring as part of the outflow
+launch process.
+
+%Since we see SiO tracing
+%the outflow, and SiO is also released by grain destruction, we infer that...
+%The small scale
+%height of the observed salt emission therefore implies that grain destruction
+%is an efficient and rapid process in disk-launched winds.
 
 %Again, we can present our viewpoint based on the data, but it's up to the
 %reader to decide if that is what 'must' be happening.
 
-The vibrationally excited transitions observed suggest that radiative
-excitation is important in this environment.  The molecular transitions we
-observe have high Einstein A values, in the range $\sim10^{-3}-10^0$, and
+The detection of highly vibrationally excited transitions of these species,
+with upper-state energy levels of as much as $\sim$3000~K, is suggestive of
+extreme physical or radiative conditions.
+%The vibrationally excited transitions observed suggest that radiative
+%excitation is important in this environment.
+The molecular transitions we
+observe have high Einstein A values, in the range $\sim10^{-3}-10^0$ s$^{-1}$, and
 correspondingly high critical densities $n_{cr} \sim10^{8}$ \percc for v=0 and
 $n_{cr} \sim 10^{12}$ for $v>=1$, where $v$ is the vibrational quantum number.
 Collisional excitation alone cannot explain the different vibrational states
